<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <View
        android:id="@+id/dialog_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="32dp"
        android:src="@drawable/ic_win"
        app:layout_constraintBottom_toTopOf="@id/dialog_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_view"
        tools:layout_editor_absoluteX="48dp" />

    <TextView
        android:id="@+id/text_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/my_font2"
        android:text="@string/_15_conis"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_view"
        app:layout_constraintEnd_toEndOf="@id/dialog_view"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@id/dialog_view"
        app:layout_constraintTop_toTopOf="@id/dialog_view"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/coin"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_money"
        app:layout_constraintBottom_toBottomOf="@id/text_coin"
        app:layout_constraintEnd_toStartOf="@id/text_coin"
        app:layout_constraintTop_toTopOf="@id/text_coin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/my_font2"
        android:text="@string/correct_answer"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_view"
        app:layout_constraintEnd_toEndOf="@id/dialog_view"
        app:layout_constraintStart_toStartOf="@id/dialog_view"
        app:layout_constraintTop_toTopOf="@id/dialog_view"
        app:layout_constraintVertical_bias="0.32" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/dialog_view"
        app:layout_constraintEnd_toEndOf="@id/dialog_view"
        app:layout_constraintStart_toStartOf="@id/dialog_view">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_no_btn"
            android:fontFamily="@font/my_font2"
            android:text="@string/menu"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Space
            android:layout_width="24dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/my_font2"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/coinLottieAnimation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/dialog_view"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="joincoin.json"
        app:lottie_loop="true"
        tools:ignore="MissingClass,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
